--- a/.editorconfig
+++ b/.editorconfig
@@ -5,5 +5,9 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.gd]
+indent_size = 4
+indent_style = tab
+
 [*.md]
 indent_size = 2
